# roofline-analyst

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/cpp/: benchmark_guard.cpp  benchmark_guard.hpp  main.cpp
src/roofline_analyst/: __init__.py  cli.py  hardware.py  hooks.py  layer_points.py  metrics.py  models.py  profiling.py  roofline.py  traffic.py
src/roofline_analyst_project/: __init__.py
