[project]
name = "roofline-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Selcuk Senturk", email = "selcuksntrk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "plotly>=6.8.0",
    "torch>=2.12.1",
]

[project.scripts]
roofline-analyst = "roofline_analyst:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"